// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactList loads contact with given id on route parameter (with picture) 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 72,
        "padding": 16,
      }
    }
    testID="header-bar"
  >
    <View
      style={
        Object {
          "borderRadius": 8,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 30,
            "justifyContent": "center",
            "width": 30,
          }
        }
        testID="back-button"
      >
        <Icon
          name="chevron-left"
          size={24}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 8,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "overflow": "hidden",
            },
          ]
        }
        testID="photo-big-button"
      >
        <Image
          height={225}
          source={
            Object {
              "uri": "http://vignette1.wikia.nocookie.net/lotr/images/6/68/Bilbo_baggins.jpg/revision/latest?cb=20130202022550",
            }
          }
          style={
            Object {
              "height": 225,
              "width": 225,
            }
          }
          width={225}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Rubik-Medium",
          "fontSize": 28,
          "marginHorizontal": 16,
        }
      }
    >
      Frodo Baggins
    </Text>
    <Text
      style={
        Object {
          "fontFamily": "Rubik-Regular",
          "fontSize": 20,
          "marginHorizontal": 16,
        }
      }
    >
      24
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderColor": "#808080",
              "borderRadius": 4,
              "borderWidth": 1,
              "overflow": "hidden",
            },
            Object {
              "marginHorizontal": 16,
              "marginVertical": 8,
            },
          ],
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Rubik-Medium",
                "fontSize": 16,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Rubik-Medium",
                  "fontSize": 16,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
        >
          Ubah kontak
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Array [
            Object {
              "backgroundColor": "#CA0B00",
              "borderRadius": 4,
              "overflow": "hidden",
            },
            Object {
              "marginHorizontal": 16,
              "marginVertical": 8,
            },
          ],
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Rubik-Medium",
                "fontSize": 16,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "Rubik-Medium",
                  "fontSize": 16,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
        >
          Hapus kontak
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ContactList loads contact with given id on route parameter 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 72,
        "padding": 16,
      }
    }
    testID="header-bar"
  >
    <View
      style={
        Object {
          "borderRadius": 8,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 30,
            "justifyContent": "center",
            "width": 30,
          }
        }
        testID="back-button"
      >
        <Icon
          name="chevron-left"
          size={24}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 8,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "overflow": "hidden",
            },
          ]
        }
        testID="photo-big-button"
      >
        <View
          style={
            Array [
              Object {
                "height": 225,
                "width": 225,
              },
              Object {
                "alignItems": "center",
                "backgroundColor": "#93b5e1",
                "borderRadius": 8,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            style={
              Object {
                "fontFamily": "Rubik-Medium",
                "fontSize": 48,
              }
            }
          >
            FB
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Rubik-Medium",
          "fontSize": 28,
          "marginHorizontal": 16,
        }
      }
    >
      Frodo Baggins
    </Text>
    <Text
      style={
        Object {
          "fontFamily": "Rubik-Regular",
          "fontSize": 20,
          "marginHorizontal": 16,
        }
      }
    >
      24
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderColor": "#808080",
              "borderRadius": 4,
              "borderWidth": 1,
              "overflow": "hidden",
            },
            Object {
              "marginHorizontal": 16,
              "marginVertical": 8,
            },
          ],
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Rubik-Medium",
                "fontSize": 16,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Rubik-Medium",
                  "fontSize": 16,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
        >
          Ubah kontak
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Array [
            Object {
              "backgroundColor": "#CA0B00",
              "borderRadius": 4,
              "overflow": "hidden",
            },
            Object {
              "marginHorizontal": 16,
              "marginVertical": 8,
            },
          ],
          false,
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Rubik-Medium",
                "fontSize": 16,
                "textAlign": "center",
              },
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "Rubik-Medium",
                  "fontSize": 16,
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
        >
          Hapus kontak
        </Text>
      </View>
    </View>
  </View>
</View>
`;
